--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "BoolflixDbContextConnection": "Data Source=localhost;Initial Catalog=boolflix-db;Integrated Security=True;Encrypt=false;"
+  }
 }
